--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/genshin.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Genshin Grouper</title>
+    <title>Genshin Grouper 3.0</title>
   </head>
   <body>
     <div id="root"></div>
