--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/ico" href="/genshin.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Genshin Grouper 3.0</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2583485775254726"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
